syntax = "proto3";

option go_package = "./pb";

package pb;

//model
message UserBasic {
  int64 id = 1;
  string phone = 2;
  string username = 3;
  string nickname = 4;
  string sex = 5;
  string avatar = 6;
  string email = 7;
  string password = 8;
  string authKey = 9;
  string authType = 10;
}

message LoginReq {
  string  authType = 1;
  string  authKey = 2;
  string  password = 3;
}
message LoginResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

//Register
message RegisterReq {
  UserBasic uerBasic = 1;
}
message RegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

//GetUserInfo
message GetUserInfoReq {
  int64  id = 1;
}
message GetUserInfoResp {
  UserBasic uerBasic = 1;
}

//UpdateUserInfo
message UpdateUserInfoReq {
  UserBasic uerBasic = 1;
}
message UpdateUserInfoResp {
  UserBasic uerBasic = 1;
}


//service
service user {
  rpc register(RegisterReq) returns(RegisterResp);
  rpc login(LoginReq) returns(LoginResp);
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc updateUserInfo(UpdateUserInfoReq) returns(UpdateUserInfoResp);
//  rpc getUserAuthByAuthKey(GetUserAuthByAuthKeyReq) returns(GetUserAuthByAuthKeyResp);
//  rpc getUserAuthByUserId(GetUserAuthByUserIdReq) returns(GetUserAuthyUserIdResp);
//  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
}
